# linemux

./: .cirrus.yml  .codecov.yaml  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: coverage.yml  lint.yml  test.yml
examples/: events.rs  lines.rs
src/: events.rs  lib.rs  reader.rs
tests/: test-logrotate.rs  test-logrotate.sh  test-newline.rs  test-newline.sh
