[package]
name = "linemux"
version = "0.2.2"
authors = ["Jon Magnuson <jon.magnuson@gmail.com>"]
edition = "2018"
description = "A library providing asynchronous, multiplexed tailing for (namely log) files."
documentation = "https://docs.rs/linemux"
repository = "https://github.com/jmagnuson/linemux"
readme = "README.md"
keywords = ["tail", "log", "watch", "fs", "events"]
license = "MIT OR Apache-2.0"
categories = ["asynchronous", "filesystem"]

[badges]
travis-ci = { repository = "jmagnuson/linemux", branch = "master" }
codecov = { repository = "jmagnuson/linemux", branch = "master", service = "github" }

[features]
default = ["tokio"]
tokio = ["tokio_"]

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["std"] }
#notify = { git = "https://github.com/notify-rs/notify/", default-features = false, features = ["macos_kqueue"] }
pin-project-lite = "0.1"
tokio_ = { package = "tokio", version = "1.0", features = ["fs", "io-util", "sync", "time"], optional = true }

[dependencies.notify]
#path = "../notify"
#git = "https://github.com/notify-rs/notify/"
git = "https://github.com/jmagnuson/notify/"
#rev = "8e638793a6a47b1bb60870bfe34f1368a76bf17b"
rev = "5496e6abe8bee180ec33760f9488781da5fff2c2"
#branch = "fsevent-feature-gating"
default-features = false
features = ["macos_kqueue"]


[dev-dependencies]
doc-comment = "0.3"
tempfile = "3.1"
tokio_ = { package = "tokio", version = "1.0", features = ["macros", "rt-multi-thread"] }
