[package]
name = "linemux"
version = "0.2.3"
authors = ["Jon Magnuson <jon.magnuson@gmail.com>"]
edition = "2018"
description = "A library providing asynchronous, multiplexed tailing for (namely log) files."
documentation = "https://docs.rs/linemux"
repository = "https://github.com/jmagnuson/linemux"
readme = "README.md"
keywords = ["tail", "log", "watch", "fs", "events"]
license = "MIT OR Apache-2.0"
categories = ["asynchronous", "filesystem"]

[badges]
travis-ci = { repository = "jmagnuson/linemux", branch = "master" }
codecov = { repository = "jmagnuson/linemux", branch = "master", service = "github" }

[features]
default = ["tokio"]
tokio = ["tokio_"]

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["std"] }
notify = { version = "5.0.0-pre.14", default-features = false, features = ["macos_kqueue"] }
pin-project-lite = "0.1"
tokio_ = { package = "tokio", version = "1", features = ["fs", "io-util", "sync", "time"], optional = true }

[dev-dependencies]
doc-comment = "0.3"
tempfile = "3.1"
tokio_ = { package = "tokio", version = "1", features = ["macros", "process", "rt-multi-thread"] }
