[package]
name = "linemux"
version = "0.2.4"
authors = ["Jon Magnuson <jon.magnuson@gmail.com>"]
edition = "2021"
description = "A library providing asynchronous, multiplexed tailing for (namely log) files."
documentation = "https://docs.rs/linemux"
repository = "https://github.com/jmagnuson/linemux"
readme = "README.md"
keywords = ["tail", "log", "watch", "fs", "events"]
license = "MIT OR Apache-2.0"
categories = ["asynchronous", "filesystem"]
rust-version = "1.60"

[badges]
travis-ci = { repository = "jmagnuson/linemux", branch = "master" }
codecov = { repository = "jmagnuson/linemux", branch = "master", service = "github" }

[features]
default = ["tokio"]
tokio = ["dep:tokio"]

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["std"] }
notify = { version = "5", default-features = false, features = ["macos_kqueue", "crossbeam-channel"] }
pin-project-lite = "0.2"
tokio = { version = "1", features = ["fs", "io-util", "sync", "time"], optional = true }

[dev-dependencies]
doc-comment = "0.3"
tempfile = "3.1"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread"] }
